<resources>
    <string name="app_name">Persistence</string>
    <string name="action_settings">Настройки</string>
    <string name="empty">" "</string>
    <string name="enter">Войти</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="save_login_data">Запомнить</string>
    <string name="enter_system">Вход в систему</string>
    <string name="loading">Загрузка…</string>
    <string name="preferences">Настройки</string>
    <string name="version">Версия: </string>
    <string name="server_version">Версия сервера: </string>
    <string name="status_checking_connection">Проверка соединения…</string>
    <string name="status_loading">Загрузка…</string>
    <string name="status_loading_stamps">Загрузка штампов подписи…</string>
    <string name="status_sync_started">Запрос обновления…</string>
    <string name="status_waiting_for_response">Ожидание ответа сервера…</string>
    <string name="status_response_ready">Ответ сервера получен. Загрузка…</string>
    <string name="status_started_persisting_response">"Ответ загружен. Обновление базы данных…"</string>
    <string name="status_persisted_classifiers">Обновлены классификаторы. Обновляются документы…</string>
    <string name="status_persisted_global_obects">Глобальный каталог обновлён. Обновляются документы…</string>
    <string name="status_persisted_documents">Обновлены документы</string>
    <string name="documents">Документы</string>
    <string-array name="tabNames">
        <item>Все</item>
        <item>Новые</item>
        <item>Просмотренные</item>
        <item>На отправку</item>
        <item>Сегодня</item>
        <item>Неделя</item>
        <item>Входящие резолюции</item>
        <item>Входящие отчеты</item>
    </string-array>
    <string name="reg_number">Рег. №:\u0020</string>
    <string name="project_number">Номер проекта:\u0020</string>
    <string name="baseDoc">Документ-основание:\u0020</string>
    <string name="errors">Ошибка:\u0020</string>
    <string name="data_not_saved">Информация не сохранена</string>
    <string name="from">Корреспондент:\u0020</string>
    <string name="correspondent">Корреспондент:\u0020</string>
    <string name="who_signed">Кто подписал:\u0020</string>
    <string name="signed">Подписал:\u0020</string>
    <string name="where_from">Откуда/от кого:\u0020</string>
    <string name="where_to">Куда/кому:\u0020</string>
    <string name="to">Корреспондент:\u0020</string>
    <string name="document_type">Вид документа:\u0020</string>
    <string name="document_subject">Содержание:\u0020</string>
    <string name="document_name">Наименование:\u0020</string>
    <string name="document_subject_of_contract">Предмет договора:\u0020</string>
    <string name="outnum">Исход. №:\u0020</string>
    <string name="numout">№ исходящий:\u0020</string>
    <string name="linktype">Тип связи:\u0020</string>
    <string name="rezolution">Резолюция:\u0020</string>
    <string name="rezdate">Дата резолюции:\u0020</string>
    <string name="creation_date">\u0020от\u0020</string>
    <string name="approval_term">Срок:\u0020</string>
    <string name="approve_by">Согласовать к:\u0020</string>
    <string name="sign_by">Подписать к:\u0020</string>
    <string name="prepared_by">Подготовил:\u0020</string>
    <string name="curator">Куратор:\u0020</string>
    <string name="approval_sending_date">Дата отпр. на согл.:\u0020</string>
    <string name="approval_date">Дата согласования:\u0020</string>
    <string name="signature_date">Дата подписания:\u0020</string>
    <string name="approvers">Согласующие:\u0020</string>
    <string name="rework_return_date">Дата:\u0020</string>
    <string name="remarks">Замечания:\u0020</string>
    <string name="returned_to_rework_by">Подписал:\u0020</string>
    <string name="rezsign">Подписал резолюцию:\u0020</string>
    <string name="note">Примечание:\u0020</string>
    <string name="annotation">Аннотация:\u0020</string>
    <string name="receiver">Получатель:\u0020</string>
    <string name="makers">Исполнители:\u0020</string>
    <string name="resolution_executive">Исполнитель:\u0020</string>
    <string name="resolution_executives">Исполнители:\u0020</string>
    <string name="controller">Контролер:\u0020</string>
    <string name="base_document_info">Документ-основание:\u0020</string>
    <string name="base_document_remark">Заголовок документа:\u0020</string>
    <string name="executive_status">Статус исполнителя:\u0020</string>
    <string name="main_executive">Основной исполнитель:\u0020</string>
    <string name="givedate">Дата передачи:\u0020</string>
    <string name="rezproject">Проект резолюции:\u0020</string>
    <string name="controldate">Срок исполнения:\u0020</string>
    <string name="seendate">Дата просмотра:\u0020</string>
    <string name="senddate">Дата передачи:\u0020</string>
    <string name="whosend">Кто направил:\u0020</string>
    <string name="text">Текст:\u0020</string>
    <string name="signer">Подписал:\u0020</string>
    <string name="resolution_signer">Подписал рез-ю:\u0020</string>
    <string name="reportReceiver">Получатель:\u0020</string>
    <string name="reportExecutive">Исполнитель:\u0020</string>
    <string name="reportSender">Направил:\u0020</string>
    <string name="workoffdate">Дата исполнения:\u0020</string>
    <string name="rejectionReason">Причина отклонения:\u0020</string>
    <string name="rejectionDate">Дата:\u0020</string>
    <string name="error">Ошибка:\u0020</string>
    <string name="lastAccess">Дата изменения:\u0020</string>
    <string name="fileName">Имя файла:\u0020</string>
    <string name="approvalUserName">Участник:\u0020</string>
    <string name="approvalControlDate">Срок согласования:\u0020</string>
    <string name="approvalCompleteDate">Дата выполнения:\u0020</string>
    <string name="approvalResult">Результат:\u0020</string>
    <string name="approvalNotes">Замечания:\u0020</string>
    <string name="docDate">Срок по документу:\u0020</string>
    <string name="resolutionText">Рез-я(мне):\u0020</string>
    <string name="outgoing_resolution_text">Рез-я(от меня):\u0020</string>
    <string name="resolution_project">Проект резолюции:\u0020</string>
    <string name="resolution_project_author">Автор проекта резолюции:\u0020</string>
    <string name="importance">Важность:\u0020</string>
    <string name="considerationTerm">Срок исполнения:\u0020</string>
    <string name="resolution_term">Срок рез-и(мне):\u0020</string>
    <string name="outgoing_resolution_term">Срок рез-и(от меня):\u0020</string>
    <string name="reportDate">Дата отчета:\u0020</string>
    <string name="outgoing_resolution_date">Дата рез-ии(от меня):\u0020</string>
    <string name="considerationTo">Кому направлен:\u0020</string>
    <string name="whomTo">Кому:\u0020</string>
    <string name="reportText">Отчет:\u0020</string>
    <string name="documentStatus">Статус документа:\u0020</string>
    <string name="approacher">Заявитель:\u0020</string>
    <string name="email">E-mail:\u0020</string>
    <string name="address">Адрес:\u0020</string>
    <string name="theme">Тематика:\u0020</string>
    <string name="approachType">Вид обращения:\u0020</string>
    <string name="approachForm">Форма обращения:\u0020</string>
    <string name="coApproachers">Созаявители:\u0020</string>
    <string name="collective">Коллективное:\u0020</string>
    <string name="approachPresident">Обращение из Администрации Президента:\u0020</string>
    <string name="themes">Тематики:\u0020</string>
    <string name="presidentTheme">Президентские тематики:\u0020</string>
    <string name="remark">Примечание:\u0020</string>
    <string name="submittedTo">Заявитель адресовал в:\u0020</string>
</resources>