<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="#66FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="168dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/login_edit_text"
                android:layout_width="260dp"
                android:layout_height="@dimen/button_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/login"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:textColor="@color/grey_darkest"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="260dp"
                android:layout_height="@dimen/button_size"
                android:layout_below="@+id/login_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/background_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:textColor="@color/grey_darkest"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/savePasswordCkeckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/save_login_data"
                android:textColor="@color/grey_darkest" />

            <Button
                android:id="@+id/loginButton"
                style="?android:attr/buttonBarStyle"
                android:layout_width="102dp"
                android:layout_height="@dimen/button_size"
                android:layout_below="@+id/passwordEditText"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/selector_image_button_faded_green"
                android:drawableStart="@drawable/icon_key"
                android:drawableTint="@color/green_button_text"
                android:gravity="center"
                android:paddingStart="14dp"
                android:paddingEnd="9dp"
                android:stateListAnimator="@null"
                android:text="@string/enter"
                android:textColor="@color/green_button_text"
                android:textSize="16sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <View
            android:id="@+id/horizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey_dark" />
    </LinearLayout>
</RelativeLayout>